--- a/www.100min.co.kr/index.html
+++ b/www.100min.co.kr/index.html
@@ -1570,7 +1570,6 @@
 																						src="img/index_image_3_150x150.jpg"
 																						class="attachment-thumbnail size-thumbnail"
 																						alt=""
-																						srcset="img/index_image_3_150x150.jpg 150w, img/index_image_3.jpg 512w"
 																						sizes="(max-width: 150px) 100vw, 150px" />
 																				</div>
 																			</div>
@@ -1865,7 +1864,6 @@
 																						src="img/index_image_5_300x217.jpg"
 																						class="attachment-medium size-medium"
 																						alt=""
-																						srcset="img/index_image_5_300x217.jpg 300w, img/index_image_5_768x555.jpg 768w, img/index_image_5_1024x740.jpg 1024w"
 																						sizes="(max-width: 300px) 100vw, 300px" />
 																				</div>
 																			</div>
@@ -1924,7 +1922,7 @@
 																						src="img/index_image_6_300x200.jpg"
 																						class="attachment-medium size-medium"
 																						alt=""
-																						srcset="img/index_image_6_300x200.jpg 300w, img/index_image_6_768x512.jpg 768w, img/effort_background.jpg 1024w"
+																						srcset="img/index_image_6_300x200.jpg 300w, img/effort_background.jpg 1024w"
 																						sizes="(max-width: 300px) 100vw, 300px" />
 																				</div>
 																			</div>
@@ -2255,8 +2253,8 @@
 	<script type='text/javascript' src='js/position.mine899.js?ver=1.11.4'></script>
 	<script type='text/javascript'>
 		/* <![CDATA[ */
-		var pum_vars = { "version": "1.16.2", "pm_dir_url": "https:\/\/www.100min.co.kr\/wp-content\/plugins\/popup-maker\/", "ajaxurl": "https:\/\/www.100min.co.kr\/wp-admin\/admin-ajax.php", "restapi": "https:\/\/www.100min.co.kr\/wp-json\/pum\/v1", "rest_nonce": null, "default_theme": "911", "debug_mode": "", "disable_tracking": "", "home_url": "\/", "message_position": "top", "core_sub_forms_enabled": "1", "popups": [], "analytics_route": "analytics", "analytics_api": "https:\/\/www.100min.co.kr\/wp-json\/pum\/v1" };
-		var pum_sub_vars = { "ajaxurl": "https:\/\/www.100min.co.kr\/wp-admin\/admin-ajax.php", "message_position": "top" };
+		// var pum_vars = { "version": "1.16.2", "pm_dir_url": "https:\/\/www.100min.co.kr\/wp-content\/plugins\/popup-maker\/", "ajaxurl": "https:\/\/www.100min.co.kr\/wp-admin\/admin-ajax.php", "restapi": "https:\/\/www.100min.co.kr\/wp-json\/pum\/v1", "rest_nonce": null, "default_theme": "911", "debug_mode": "", "disable_tracking": "", "home_url": "\/", "message_position": "top", "core_sub_forms_enabled": "1", "popups": [], "analytics_route": "analytics", "analytics_api": "https:\/\/www.100min.co.kr\/wp-json\/pum\/v1" };
+		// var pum_sub_vars = { "ajaxurl": "https:\/\/www.100min.co.kr\/wp-admin\/admin-ajax.php", "message_position": "top" };
 		var pum_popups = { "pum-920": { "triggers": [{ "type": "auto_open", "settings": { "cookie_name": ["pum-920"], "delay": "0" } }], "cookies": [{ "event": "on_popup_close", "settings": { "name": "pum-920", "key": "", "session": null, "path": null, "time": "0 month" } }], "disable_on_mobile": false, "disable_on_tablet": false, "atc_promotion": null, "explain": null, "type_section": null, "theme_id": "911", "size": "custom", "responsive_min_width": "0px", "responsive_max_width": "100px", "custom_width": "400px", "custom_height_auto": true, "custom_height": "380px", "scrollable_content": false, "animation_type": "slide", "animation_speed": "350", "animation_origin": "bottom", "open_sound": "none", "custom_sound": "", "location": "right bottom", "position_top": "100", "position_bottom": "10", "position_left": "0", "position_right": "10", "position_from_trigger": false, "position_fixed": true, "overlay_disabled": true, "stackable": true, "disable_reposition": false, "zindex": "1999999999", "close_button_delay": "0", "fi_promotion": null, "close_on_form_submission": false, "close_on_form_submission_delay": "0", "close_on_overlay_click": true, "close_on_esc_press": true, "close_on_f4_press": true, "disable_form_reopen": false, "disable_accessibility": false, "theme_slug": "default-theme", "id": 920, "slug": "%ed%85%8c%ec%8a%a4%ed%8a%b8" } };
 /* ]]> */
 	</script>
