--- a/연습/kyowa/index.html
+++ b/연습/kyowa/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kyowa-ltd.jp</title>
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/ScrollTrigger.min.js"></script>
+    <script src="js/gsap.min.js"></script>
 </head>
 <body>
     <div id="container">
@@ -24,6 +28,7 @@
                     <li class="contact">
                         <a href="#">
                             <img width="25px" height="25px" src="src/envelope-solid.svg">
+                            <svg class="line-anime" width="40" height="40"><circle cx="20" cy="20" r="20" /></svg>
                         </a>
                     </li>
                 </ul>
@@ -44,7 +49,7 @@
                     <img>
                 </div>
             </main>
-            <section class="section_about">
+            <section class="section_about v-item">
                 <div class="title">
                     <span>about</span>
                 </div>
@@ -61,6 +66,7 @@
                             ファシリティマネジメントの構築と実現に向けて、持続可能な戦略を歩み続けていきます。
                         </p>
                     </div>
+                    <div class="bg-text bg-text-about">About Us</div>
                     <div class="view_more">
                         <p>
                             <a href="#">
@@ -70,7 +76,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section_service">
+            <section class="section_service v-item">
                 <div class="title">
                     <span>service</span>
                 </div>
@@ -84,6 +90,7 @@
                         “お客様にとってより良いサービスを創造すること“を大切に、<br>
                         日々の業務に取り組んでおります。
                     </p>
+                    <div class="bg-text bg-text-service">Service</div>
                 </div>
                 <div class="division">
                     <div class="article_item">
@@ -149,7 +156,7 @@
                     </a>
                 </div>
             </section>
-            <section class="section_recruit">
+            <section class="section_recruit v-item">
                 <div class="content">
                     <div class="title">
                         <span>recruit</span>
@@ -169,8 +176,12 @@
                 <div class="img">
 
                 </div>
+                <div class="bg-text pc">
+                    <span>Let’s work together and grow together </span>
+                    <span>Let’s work together and grow together</span>
+                </div> 
             </section>
-            <section class="section_news">
+            <section class="section_news v-item">
                 <div class="title">
                     <p class="big_title en">news</p>
                     <span>お知らせ</span>
