--- a/연습/aston/index.html
+++ b/연습/aston/index.html
@@ -54,18 +54,167 @@
                     <img src="img/hero-parallax-2.png">
                     <img src="img/hero-parallax-1.png">
                 </div>
+                <div class="sentence">
+                    <h1>Currency<br> without limits</h1>
+                    <span>Scroll to explore</span>
+                </div>
             </section>
             <section class="section_2">
-                section2
+                <div class="left_side">
+                    <p>WELCOME</p>
+                    <p>
+                        At Aston we strive to
+                        understand our clients and
+                        deliver to their needs.
+                    </p>
+                    <p>
+                        Every day, every step of the way, we’re here to help our clients get things
+                        done: making foreign currency exchange transparent. Seamless.
+                        Assured. And right on the money. With exceptional delivered as
+                        standard. No flaky fin tech. Just a much-needed dash of refreshingly
+                        clear guidance teamed with the brightest, smartest technology platform
+                        offering a personalised treasury management.
+                    </p>
+                </div>
+                <div class="right_side">
+                    <img src="/img/Home-2_fa91343311d004704fa3ce6a3567953a.jpg">
+                </div>
+
             </section>
             <section class="section_3">
-                section3
+                <div class="left_side">
+                    <div class="sentence">
+                        <p>OVERVIEW</p>
+                        <p>
+                            <span class="title_underline">Tailored</span>
+                            International
+                            payment solutions.
+                        </p>
+                        <p>
+                            Your bespoke foreign exchange service will be personalised and tailored to your needs – no
+                            ‘one size fits all’ solutions here. And, at every stage, we will be totally transparent and open.
+                            This is how we go beyond transactions and start to build relationships; fostering close ties
+                            with our clients which lead to mutually beneficial repeat business. We are minimum
+                            cost/maximum efficiency; always the solution – never the problem.
+                        </p>
+                        <div class="btn_wrapper">
+                            <a href="#" class="btn_item btn_contact">
+                                <div class="origin flex">Contact us</div>
+                                <div class="effect flex">Contact us</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="box_item">
+                    <div class="sentence">
+                        <p>
+                            Duty of Care
+                        </p>
+                        <p>
+                            We treat your money as our own. Expect diligence and efficiency from day one.
+                        </p>
+                    </div>
+                </div>
             </section>
             <section class="section_4">
-                section4
+                <div class="left_side">
+                    <img src="/img/Home-3_fa91343311d004704fa3ce6a3567953a.jpg">
+                </div>
+                <div class="right_side">
+                    <div class="sentence">
+                        <p>OUR MISSION</p>
+                        <p>
+                            <span class="title_underline">Quality</span> without
+                            compromise.
+                        </p>
+                        <p>
+                            We are the ‘go-to’ team for treasury management. With a service that’s
+                            0% dull and 100% distinct. Tech-based but people-first. We're fairer and
+                            more open. Pound-for-pound punching above our weight. We're
+                            fast-moving and quick-thinking - always one step ahead of the game.
+                        </p>
+                        <div class="btn_wrapper">
+                            <a href="#" class="btn_item btn_contact">
+                                <div class="origin flex">Contact us</div>
+                                <div class="effect flex">Contact us</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section class="section_5">
-                section5
+                <div class="left_side">
+                    <div class="sentence">
+                        <p>TRANSPARENCY</p>
+                        <p>
+                            Transparent.<br>
+                            Seamless. <span class="title_underline">Assured.</span>
+                        </p>
+                        <p>
+                            Every day, every step of the way, we’re here to help our clients get things
+                            done: making foreign currency exchange transparent. Seamless.
+                            Assured. And right on the money. With exceptional delivered as
+                            standard. No flaky fin tech. Just a much-needed dash of refreshingly
+                            clear guidance teamed with the brightest, smartest technology platform
+                            offering a personalised treasury management.
+                        </p>
+                        <div class="btn_wrapper">
+                            <a href="#" class="btn_item btn_contact">
+                                <div class="origin flex">Contact us</div>
+                                <div class="effect flex">Contact us</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="right_side">
+                    <img src="/img/Home-4_fa91343311d004704fa3ce6a3567953a.jpg">
+                </div>
+            </section>
+            <section class="section_6">
+                <div class="left_side">
+                    <div class="sentence">
+                        <p>PERSONAL ACCOUNT</p>
+                        <p>
+                            <span class="title_underline">Foreign</span> Currency
+                        </p>
+                        <p>
+                            You could be transferring the proceeds of an international property sale.
+                            You could be transferring your monthly salary back to your home
+                            country. Whatever you need us for, we will get the best rate of exchange
+                            we can for you - because we are here to help.
+                        </p>
+                        <div class="btn_wrapper">
+                            <a href="#" class="btn_item btn_contact">
+                                <div class="origin flex">LEARN MORE</div>
+                                <div class="effect flex">LEARN MORE</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="right_side">
+                    <div class="sentence">
+                        <p>BUSINESS ACCOUNT</p>
+                        <p>
+                            <span class="title_underline">Corporate</span> Payments
+                        </p>
+                        <p>
+                            This is sophistication without over-complication. We have developed a
+                            unique banking technology platform which puts you firmly in control of
+                            your hedging, payments and foreign exchange transactions – helping
+                            you accurately manage cash flow, mitigate currency risk and streamline
+                            your day-to-day banking requirements.
+                        </p>
+                        <div class="btn_wrapper">
+                            <a href="#" class="btn_item btn_contact">
+                                <div class="origin flex">LEARN MORE</div>
+                                <div class="effect flex">LEARN MORE</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section_7">
+                
             </section>
         </main>
     </div>
