--- a/연습/css 연습 220306/accordion.html
+++ b/연습/css 연습 220306/accordion.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/accordion_1.css">
+    <script src="js/accordion_1.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Practice-Accrodion</title>
 </head>
 <body>
-    
+    <table class="table">
+        <thead>
+            <tr>
+                <th>No</th>
+                <th>FAQ Title</th>
+                <th>Category</th>
+                <th>Date</th>
+                <th>hit</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>FAQ 제목</td>
+                <td>이용안내</td>
+                <td>2022.03.06</td>
+                <td>11</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
