--- a/연습/css 연습 220306/accordion.html
+++ b/연습/css 연습 220306/accordion.html
@@ -11,25 +11,91 @@
     <title>Practice-Accrodion</title>
 </head>
 <body>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>No</th>
-                <th>FAQ Title</th>
-                <th>Category</th>
-                <th>Date</th>
-                <th>hit</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>FAQ 제목</td>
-                <td>이용안내</td>
-                <td>2022.03.06</td>
-                <td>11</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container">
+        <h3 style="text-align: center; margin-top: 50px">
+            FAQ
+            <small class="text-muted">문의 및 답변 공간입니다.</small>
+        </h3>
+        <br>
+        <button id="btn-all-close">FAQ All Close</button>
+        <table class="table table-striped table-hover">
+            <caption>FAQ 리스트입니다. (캡션)</caption>
+            <thead class="table-primary text-center">
+                <tr>
+                    <th>No</th>
+                    <th>FAQ Title</th>
+                    <th>Category</th>
+                    <th>Date</th>
+                    <th>hit</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>
+                        <div class="panel-faq-container">
+                            <p class="panel-faq-title">What is Lorem Ipsum?</p>
+                            <div class="panel-faq-answer">
+                                <p>Answer (1) ... ↓</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td>이용안내</td>
+                    <td>2022.03.06</td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>
+                        <div class="panel-faq-container">
+                            <p class="panel-faq-title">What is Lorem Ipsum?</p>
+                            <div class="panel-faq-answer">
+                                <p>Answer (2) ... ↓</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td>이용안내</td>
+                    <td>2022.03.06</td>
+                    <td>12</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>
+                        <div class="panel-faq-container">
+                            <p class="panel-faq-title">What is Lorem Ipsum?</p>
+                            <div class="panel-faq-answer">
+                                <p>Answer (3) ... ↓</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td>이용안내</td>
+                    <td>2022.03.06</td>
+                    <td>13</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>
+                        <div class="panel-faq-container">
+                            <p class="panel-faq-title">What is Lorem Ipsum?</p>
+                            <div class="panel-faq-answer">
+                                <p>Answer (4) ... ↓</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td>이용안내</td>
+                    <td>2022.03.06</td>
+                    <td>14</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
