--- a/연습/css 연습 220306/accordion.html
+++ b/연습/css 연습 220306/accordion.html
@@ -29,10 +29,10 @@
                     <th>hit</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="text-center">
                 <tr>
                     <td>1</td>
-                    <td>
+                    <td class="text-start" width="60%">
                         <div class="panel-faq-container">
                             <p class="panel-faq-title">What is Lorem Ipsum?</p>
                             <div class="panel-faq-answer">
@@ -48,7 +48,7 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>
+                    <td class="text-start" width="60%">
                         <div class="panel-faq-container">
                             <p class="panel-faq-title">What is Lorem Ipsum?</p>
                             <div class="panel-faq-answer">
@@ -64,7 +64,7 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>
+                    <td class="text-start" width="60%">
                         <div class="panel-faq-container">
                             <p class="panel-faq-title">What is Lorem Ipsum?</p>
                             <div class="panel-faq-answer">
@@ -80,7 +80,7 @@
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>
+                    <td class="text-start" width="60%">
                         <div class="panel-faq-container">
                             <p class="panel-faq-title">What is Lorem Ipsum?</p>
                             <div class="panel-faq-answer">
