--- a/연습/css 연습 220306/accordion.html
+++ b/연습/css 연습 220306/accordion.html
@@ -94,8 +94,13 @@
                     <td>2022.03.06</td>
                     <td>14</td>
                 </tr>
+                <tr class="bg-info">
+                    <td class="text-left" colspan=4>자주 묻는 질문 총 합계</td>
+                    <td>182</td>
+                </tr>
             </tbody>
         </table>
     </div>
+    
 </body>
 </html>
