--- a/연습/220311 로컬스토리지 연습/localStorage.html
+++ b/연습/220311 로컬스토리지 연습/localStorage.html
@@ -33,7 +33,7 @@
                 </tr>
                 <tr>
                     <td class="align-middle">브라우저의 로컬 데이터 가져오기</td>
-                    <td class="align-middle">↑ 위에 표시</td>
+                    <td class="align-middle"><input class="input2" disabled></td>
                     <td><button class="btnGetLocalData">Get Data</button></td>
                     <!-- valign="middle" 이거는 안될 수 있음! -->
                 </tr>
