--- a/연습/220322 설문조사 연습/index.html
+++ b/연습/220322 설문조사 연습/index.html
@@ -20,15 +20,16 @@
             <p>백의민족 직업만족도 설문조사입니다.<br>
                 아래의 시작하기 버튼을 눌러주세요.
             </p>
-            <button type="button" class="btn btn-info mt-3 start">시작하기</button>
+            <button type="button" class="btn btn-info mt-3 start" onclick="js:begin()">시작하기</button>
         </section>
 
         <section id="qna">
-
+            test
         </section>
         <section id="result">
 
         </section>
-    </div>  
+    </div>
+    <script src="js/start.js" charset="utf-8"></script>  
 </body>
 </html>
