--- a/연습/220322 설문조사 연습/index.html
+++ b/연습/220322 설문조사 연습/index.html
@@ -24,12 +24,18 @@
         </section>
 
         <section id="qna">
-            test
+            <div class="q_box">
+
+            </div>
+            <div class="answer_box">
+
+            </div>
         </section>
         <section id="result">
 
         </section>
     </div>
+    <script src="js/data.js"></script>
     <script src="js/start.js" charset="utf-8"></script>  
 </body>
 </html>
