설문조사 settimeout으로 애니메이션 부드럽게

--- a/연습/220322 설문조사 연습/index.html
+++ b/연습/220322 설문조사 연습/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div id="container">
+    <div class="container">
         <section id="main" class="col-12 mx-auto mt-5 py-5 px-3">
             <h3>백의민족 직업만족도 설문조사</h3>
             <div class="col-6 mx-auto">
@@ -24,10 +24,10 @@
         </section>
 
         <section id="qna">
-            <div class="q_box">
+            <div class="qBox my-5 py-3 mx-auto">
 
             </div>
-            <div class="answer_box">
+            <div class="answerBox">
 
             </div>
         </section>
