--- a/연습/220322 설문조사 연습/index.html
+++ b/연습/220322 설문조사 연습/index.html
@@ -24,16 +24,36 @@
         </section>
 
         <section id="qna">
+
             <div class="qBox my-5 py-3 mx-auto">
 
             </div>
             <div class="answerBox">
-
+                
+            </div>
+            <div class="status mx-auto mt-5">
+                <div class="statusBar">
+    
+                </div>
             </div>
         </section>
         <section id="result">
-
+            <h3>결과 안내</h3>
+            <div class="resultName"></div>
+            <div class="col-6 mx-auto">
+                <img src="img/로고_최종.png" alt="mainImage" class="img-fluid">
+            </div>
+            <p>백의민족 직업만족도 설문조사 결과입니다.<br>
+                아래의 공유하기를 눌러주세요.
+            </p>
+            <div class="resultDesc"></div>
+            <button type="button">공유하기</button>
         </section>
+        <div class="wrap">
+            <div class="aurora-base aurora-one"></div>
+            <div class="aurora-base aurora-two"></div>
+            <div class="aurora-base aurora-three"></div>
+        </div>
     </div>
     <script src="js/data.js"></script>
     <script src="js/start.js" charset="utf-8"></script>  
