--- a/연습/220322 설문조사 연습/index.html
+++ b/연습/220322 설문조사 연습/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>백의민족 직업만족도 설문조사</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/default.css">
@@ -33,7 +33,7 @@
             </div>
             <div class="status mx-auto mt-5">
                 <div class="statusBar">
-    
+
                 </div>
             </div>
         </section>
@@ -42,6 +42,7 @@
             <div class="resultName"></div>
             <div class="col-6 mx-auto">
                 <img src="img/로고_최종.png" alt="mainImage" class="img-fluid">
+                <div id="resultImg" class="my-3 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto"></div>
             </div>
             <p>백의민족 직업만족도 설문조사 결과입니다.<br>
                 아래의 공유하기를 눌러주세요.
