--- a/연습/220322 설문조사 연습/index.html
+++ b/연습/220322 설문조사 연습/index.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </section>
-        <section id="result">
+        <section id="result"  class="col-12 mx-auto mt-5 py-5 px-3">
             <h3>결과 안내</h3>
             <div class="resultName"></div>
             <div class="col-6 mx-auto">
