--- a/연습/220322 설문조사 연습/index.html
+++ b/연습/220322 설문조사 연습/index.html
@@ -4,11 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="백의민족">
+    <meta name="keywords" content="백의민족 직업만족도 설문조사">
+    <meta name="description" content="백의민족 직업만족도 설문조사">
+    <!-- sns share-->
+    <meta property="og:url" content="https://willowy-alfajores-9f7c15.netlify.app"/>
+    <meta property="og:title" content="백의민족 직업만족도 설문조사"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="img/로고_최종.png"/>
+    <meta property="og:description" content="백의민족 직업만족도 설문조사"/>
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <title>백의민족 직업만족도 설문조사</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>
+        Kakao.init('200fe74968bedefbfe0cbf324c8eec39');
+        Kakao.isInitialized();
+    </script>
 </head>
 <body>
     <div class="container">
@@ -48,7 +80,7 @@
                 아래의 공유하기를 눌러주세요.
             </p>
             <div class="resultDesc"></div>
-            <button type="button">공유하기</button>
+            <button type="button" class="kakao mt-3 py-2 px-3" onclick="js:kakaoShare()">공유하기</button>
         </section>
         <div class="wrap">
             <div class="aurora-base aurora-one"></div>
@@ -58,5 +90,6 @@
     </div>
     <script src="js/data.js"></script>
     <script src="js/start.js" charset="utf-8"></script>  
+    <script src="js/share.js" charset="utf-8"></script>  
 </body>
 </html>
