--- a/연습/220414 untitled/prototype.html
+++ b/연습/220414 untitled/prototype.html
@@ -22,6 +22,7 @@
         // sigolujabu.run = function(){
         //     return `${this.name}이 달리고 있어요!`
         // }
+        //  애로우 함수는 this를 가지지 않는다.
 
         sigolujabu.run = () => {
             return `${this.name}이 달리고 있어요!`
