--- a/연습/react prc/react webgame/99.test/vueTest.html
+++ b/연습/react prc/react webgame/99.test/vueTest.html
@@ -24,6 +24,7 @@
             }
         })
 
+        // 기억할것 : el, data, methods 
         const app = new Vue({
             el: '#button',
             data: {
